[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]


[project]
name = "fang_tools"
requires-python = ">=3.7"

dependencies = [
    "rich>=13.0.0"
]
description = ""
dynamic = ["version"]


[tool.hatch.version]
path = 'fang_tools/__about__.py'


[tool.hatch.envs.build]
dependencies = [
    "maturin",
]


[tool.hatch.envs.dev]
dependencies = [
    "mypy",
]


[tool.mypy]
strict_optional = false


[tool.hatch.envs.docs]
dependencies = [
    "sphinx",
    "sphinx-autobuild",
]


[tool.hatch.envs.docs.scripts]
reload="sphinx-autobuild docs/source/ docs/build/html"
build="sphinx-build -b html docs/source/ docs/build/html"
